Library/AXL(Library)/Visual Basic/AXM.bas


' Set acceleration jerk value of specific axis.[%].
Public Declare Function AxmMotSetAccelJerk Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dAccelJerk As Double) As Long
' Return acceleration jerk value of specific axis.
Public Declare Function AxmMotGetAccelJerk Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpAccelJerk As Double) As Long


' Set deceleration jerk value of specific axis.[%].
Public Declare Function AxmMotSetDecelJerk Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dDecelJerk As Double) As Long
' Return deceleration jerk value of specific axis.
Public Declare Function AxmMotGetDecelJerk Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpDecelJerk As Double) As Long

' Setting priority when determining speed profile of specified axis.(Velocity or Acceleration)
' Priority : PRIORITY_VELOCITY   '0' - Calculate close to specified speed value when determining velocity profile.
'            PRIORITY_ACCELTIME  '1' - Calculate close to specified speed value when determining Acceleration / Deceleration time profile.
Public Declare Function AxmMotSetProfilePriority Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uPriority As Long) As Long
' Return priority when determining speed profile of specified axis.(Velocity or Acceleration)
Public Declare Function AxmMotGetProfilePriority Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upPriority As Long) As Long


'=========== Setting API related in/output signal ================================================================================
' Set Z phase level of specific axis.
' uLevel : LOW(0), HIGH(1)
Public Declare Function AxmSignalSetZphaseLevel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uLevel As Long) As Long
' Return Z phase level of specific axis.
Public Declare Function AxmSignalGetZphaseLevel Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upLevel As Long) As Long


' Set output level of Servo-On signal of specific axis.
' uLevel : LOW(0), HIGH(1)
Public Declare Function AxmSignalSetServoOnLevel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uLevel As Long) As Long
' Return output level of Servo-On signal of specific axis.
Public Declare Function AxmSignalGetServoOnLevel Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upLevel As Long) As Long


' Set output level of Servo-Alarm Reset signal of specific axis.
' uLevel : LOW(0), HIGH(1)
Public Declare Function AxmSignalSetServoAlarmResetLevel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uLevel As Long) As Long
' Return output level of Servo-Alarm Reset signal of specific axis.
Public Declare Function AxmSignalGetServoAlarmResetLevel Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upLevel As Long) As Long


' Set whether to use Inposition signal of specific axis and signal input level.
' uLevel : LOW(0), HIGH(1), UNUSED(2), USED(3)
Public Declare Function AxmSignalSetInpos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uUse As Long) As Long
' Return whether to use Inposition signal of specific axis and signal input level.
Public Declare Function AxmSignalGetInpos Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upUse As Long) As Long
' Return inposition signal input mode of specific axis.
Public Declare Function AxmSignalReadInpos Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long


' Set whether to use emergency stop or not against to alarm signal input and set signal input level of specific axis.
' uLevel : LOW(0), HIGH(1), UNUSED(2), USED(3)
Public Declare Function AxmSignalSetServoAlarm Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uUse As Long) As Long
' Return whether to use emergency stop or not against to alarm signal input and set signal input level of specific axis.
Public Declare Function AxmSignalGetServoAlarm Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upUse As Long) As Long
' Return input level of alarm signal of specific axis.
Public Declare Function AxmSignalReadServoAlarm Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long


' Set whether to use end limit sensor of specific axis and input level of signal.
' Available to set of slow down stop or emergency stop when end limit sensor is input.
' uStopMode: EMERGENCY_STOP(0), SLOWDOWN_STOP(1)
' uPositiveLevel, uNegativeLevel : LOW(0), HIGH(1), UNUSED(2), USED(3)
Public Declare Function AxmSignalSetLimit Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uStopMode As Long, ByVal uPositiveLevel As Long, ByVal uNegativeLevel As Long) As Long
' Return whether to use end limit sensor of specific axis , input level of signal and stop mode for signal input.
Public Declare Function AxmSignalGetLimit Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStopMode As Long, ByRef upPositiveLevel As Long, ByRef upNegativeLevel As Long) As Long
' Return the input state of end limit sensor of specific axis.
Public Declare Function AxmSignalReadLimit Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upPositiveStatus As Long, ByRef upNegativeStatus As Long) As Long


' Set whether to use software limit, count to use and stop method of specific axis.
' uUse       : DISABLE(0), ENABLE(1)
' uStopMode  : EMERGENCY_STOP(0), SLOWDOWN_STOP(1)
' uSelection : COMMAND(0), ACTUAL(1)
' Caution: When software limit is set in advance by using above API in origin detecting and is moving, if the detecting of origin is stopped during detecting, it becomes DISABLE.
Public Declare Function AxmSignalSetSoftLimit Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uUse As Long, ByVal uStopMode As Long, ByVal uSelection As Long, ByVal dPositivePos As Double, ByVal dNegativePos As Double) As Long
' Return whether to use software limit, count to use and stop method of specific axis.
Public Declare Function AxmSignalGetSoftLimit Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upUse As Long, ByRef upStopMode As Long, ByRef upSelection As Long, ByRef dpPositivePos As Double, ByRef dpNegativePos As Double) As Long
Public Declare Function AxmSignalReadSoftLimit Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upPositiveStatus As Long, ByRef upNegativeStatus As Long) As Long


' Set the stop method of emergency stop(emergency stop/slowdown stop) ,or whether to use or not.
' uStopMode  : EMERGENCY_STOP(0), SLOWDOWN_STOP(1)
' uLevel : LOW(0), HIGH(1), UNUSED(2), USED(3)
Public Declare Function AxmSignalSetStop Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uStopMode As Long, ByVal uLevel As Long) As Long
' Return the stop method of emergency stop(emergency stop/slowdown stop) ,or whether to use or not.
Public Declare Function AxmSignalGetStop Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStopMode As Long, ByRef upLevel As Long) As Long
' Return input state of emergency stop.
Public Declare Function AxmSignalReadStop Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long


' Output the Servo-On signal of specific axis.
' uOnOff : FALSE(0), TRUE(1) ( The case of universal 0 output)
Public Declare Function AxmSignalServoOn Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uOnOff As Long) As Long
' Return the output state of Servo-On signal of specific axis.
Public Declare Function AxmSignalIsServoOn Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upOnOff As Long) As Long


' Output the Servo-Alarm Reset signal of specific axis.
' uOnOff : FALSE(0), TRUE(1) (The case of universal 1 output)
Public Declare Function AxmSignalServoAlarmReset Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uOnOff As Long) As Long


' Set universal output value.
' uValue : Hex Value 0x00
Public Declare Function AxmSignalWriteOutput Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uValue As Long) As Long
' Return universal output value.
Public Declare Function AxmSignalReadOutput Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upValue As Long) As Long


' ML3 Only
' Return Brake sensor state of target axis.
Public Declare Function AxmSignalReadBrakeOn Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upOnOff As Long) As Long


' lBitNo : Bit Number(0 - 4)
' uOnOff : FALSE(0), TRUE(1)
' Set universal output values by bit.
Public Declare Function AxmSignalWriteOutputBit Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lBitNo As Long, ByVal uOnOff As Long) As Long
' Return universal output values by bit.
Public Declare Function AxmSignalReadOutputBit Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lBitNo As Long, ByRef upOnOff As Long) As Long


' Return universal input value in Hex value.
Public Declare Function AxmSignalReadInput Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upValue As Long) As Long

' lBitNo : Bit Number(0 - 4)
' Return universal input value by bit.
Public Declare Function AxmSignalReadInputBit Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lBitNo As Long, ByRef upOn As Long) As Long


' Set universal In/Out digital filter coefficient.
' uSignal: END_LIMIT(0), INP_ALARM(1), UIN_00_01(2), UIN_02_04(3)
' dBandwidthUsec: 0.2uSec~26666usec
Public Declare Function AxmSignalSetFilterBandwidth Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uSignal As Long, ByVal dBandwidthUsec As Double) As Long


'========== API which verifies the state during motion moving and after moving. ============================================================
' Return number of bits of general purpose input.
Public Declare Function AxmSignalGetInputBitCount Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upInputCount As Long) As Long


' Return number of bits of general purpose output.
Public Declare Function AxmSignalGetOutputBitCount Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upOutputCount As Long) As Long


'========== API for checking status during or after motion. ==============================================================
' Return pulse output status of specified axis.(In motion state)
Public Declare Function AxmStatusReadInMotion Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long


'  Return move pulse counter value of specific axis after start of move.
'  (pulse count value)"
Public Declare Function AxmStatusReadDrivePulseCount Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef lpPulse As Long) As Long


' Return DriveStatus register (status of in-motion) of specific Axis.
' Caution: All Motion Product is different Hardware bit signal. Let's refer Manual and AXHS.xxx
Public Declare Function AxmStatusReadMotion Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long


' Return EndStatus(status of stop) register of specific axis.
' Caution: All Motion Product is different Hardware bit signal. Let's refer Manual and AXHS.xxx
Public Declare Function AxmStatusReadStop Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long


' Return Mechanical Signal Data(Current mechanical signal status)of specific axis.
' Caution: All Motion Product is different Hardware bit signal. Let's refer Manual and AXHS.xxx
Public Declare Function AxmStatusReadMechanical Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long


' Read current move velocity oo specific axis.
Public Declare Function AxmStatusReadVel Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpVel As Double) As Long


' Return the error between Command Pos and Actual Pos of specific axis.
Public Declare Function AxmStatusReadPosError Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpError As Double) As Long


' Verify the travel(traveled) distance to the final drive.
Public Declare Function AxmStatusReadDriveDistance Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpUnit As Double) As Long


' Set use the Position information Type of specific Axis.
' uPosType  : Select Position Information Type (Actual position / Command position)
'    POSITION_LIMIT '0' - Normal action, In all round action.
'    POSITION_BOUND '1' - Position cycle type, dNegativePos ~ dPositivePos Range
' Caution(PCI-Nx04)
' - If count value exceeds the max value, it becomes min value when setting BOUND.
' The other way, count value exceeds the min value, it becomes max value.
